[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/Retro Gaming.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/Tutorial/Tutorial1.gd" type="Script" id=2]
[ext_resource path="res://assets/Tutorial/Interactions/Box (1).png" type="Texture" id=3]
[ext_resource path="res://assets/Tutorial/Interactions/Background (1).png" type="Texture" id=4]
[ext_resource path="res://assets/Tutorial/Interactions/ChemicalFrames/frames all.png" type="Texture" id=5]
[ext_resource path="res://assets/Tutorial/Interactions/Next.png" type="Texture" id=6]
[ext_resource path="res://assets/Tutorial/Interactions/ChemicalFrames/all frames box.png" type="Texture" id=7]
[ext_resource path="res://assets/Tutorial/Interactions/Back.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
resource_name = "InteractionChemical"
length = 2.1
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:vframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2, 1.35, 1.5, 1.65, 1.8, 1.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 9, 10, 10 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
step = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "animation-box"
length = 2.0
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath(".:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6, 0.75, 0.9, 1.05, 1.2, 1.35, 1.5, 1.65, 1.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 10, 11 ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Background(1)" type="Sprite" parent="."]
position = Vector2( 640, 360 )
texture = ExtResource( 4 )

[node name="Box(1)" type="Sprite" parent="."]
position = Vector2( 632, 360 )
texture = ExtResource( 3 )

[node name="Back" type="Button" parent="."]
margin_left = 75.0
margin_top = 605.0
margin_right = 130.0
margin_bottom = 674.0
icon = ExtResource( 8 )
flat = true

[node name="Interactions" type="Label" parent="." groups=["TutorialText"]]
margin_left = 354.0
margin_top = 75.0
margin_right = 830.0
margin_bottom = 157.0
custom_fonts/font = SubResource( 1 )
text = "Interações"
align = 1

[node name="Text1" type="Label" parent="." groups=["TutorialText"]]
margin_left = 645.0
margin_top = 219.0
margin_right = 1152.0
margin_bottom = 361.0
custom_fonts/font = SubResource( 3 )
text = "Ao longo do jogo você encontrará diversas coisas que poderá interagir. Ao se aproximar, um contorno branco aparece, destacando e indicando a possibilidade de interação."
align = 2
autowrap = true

[node name="Text2" type="Label" parent="." groups=["TutorialText"]]
margin_left = 145.0
margin_top = 476.0
margin_right = 773.0
margin_bottom = 618.0
custom_fonts/font = SubResource( 2 )
text = "Essa interação pode ser um diálogo, um minigame ou parte do desafio do nível atual.
Quando vir um objeto destacado, pressione uma das teclas de interação para experimentar a ação disponível"
valign = 1
autowrap = true

[node name="Next" type="Button" parent="."]
margin_left = 1144.0
margin_top = 621.0
margin_right = 1186.0
margin_bottom = 660.0
icon = ExtResource( 6 )
flat = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 372, 315 )
texture = ExtResource( 5 )
hframes = 3
vframes = 4
region_rect = Rect2( 0, 0, 965.639, 701.399 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
root_node = NodePath("../../Interactions")
autoplay = "InteractionChemical"
anims/InteractionChemical = SubResource( 4 )
anims/RESET = SubResource( 5 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 952, 496 )
scale = Vector2( 1, 1.00867 )
texture = ExtResource( 7 )
hframes = 3
vframes = 4
region_rect = Rect2( 0, 0, 974.358, 704.481 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2"]
anims/RESET = SubResource( 6 )
anims/animation-box = SubResource( 7 )

[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
